2010-03-18 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/ddconfig_in.h:
	  fixed endianness detection, so that it works on Solaris

2010-03-17 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, debugger/mcs51/configure.in,
	  debugger/mcs51/configure, sim/ucsim/configure.in,
	  sim/ucsim/configure, sim/ucsim/aclocal.m4, src/SDCCutil.c:
	  preparations for *BSD and Solaris ports
	* configure, debugger/mcs51/configure, debugger/mcs51/configure.in,
	  configure.in, sim/ucsim/configure, sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/xa.src/Makefile.in, sim/ucsim/z80.src/Makefile.in,
	  sim/ucsim/gui.src/Makefile.in,
	  sim/ucsim/gui.src/serio.src/Makefile.in,
	  sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	  sim/ucsim/sim.src/Makefile.in, sim/ucsim/configure.in,
	  sim/ucsim/hc08.src/Makefile.in, sim/ucsim/s51.src/Makefile.in,
	  sim/ucsim/avr.src/Makefile.in, sdas/as8051/Makefile.in,
	  sdas/asz80/Makefile.in, sdas/linksrc/Makefile.in,
	  sim/ucsim/main_in.mk: portable -Wall
	* support/cpp/Makefile.in, support/cpp/libiberty/alloca.c:
	  added alloca.c

2010-03-15 Borut Razem <borut.razem AT siol.net>

	* device/lib/*.c: sdcc library license changed to GPL+LE

2010-03-13 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: removed lib/src/z80/*.c from the package
	* src/z80/gen.c: fixed warning: suggest parentheses around assignment
	  used as truth value
	* sdas/asxxsrc/sdas.c, sdas/linksrc/sdld.c:
	  fixed warning: implicit declaration of function 'tolower'
	* sdas/asxxsrc/asmain.c: fixed warning: variable not initialized
	* device/include/limits.h, device/include/stdint.h,
	  device/include/float.h, device/include/typeof.h,
	  device/include/stddef.h, device/include/sdcc-lib.h,
	  device/include/stdlib.h, device/include/stdio.h,
	  device/include/math.h, device/include/asm/default/features.h,
	  device/include/assert.h, device/include/setjmp.h,
	  device/include/stdbool.h, device/include/ctype.h,